# thequietpilgrim-website

./: .gitignore  CLAUDE.md  CNAME  README.md  index.html  pyproject.toml  tqp_index.html
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
dashboard/: pricing.html  sessions.html  sessions_dashboard.html  tqp_dashboard_complete.html
docs/: INGREDIENT_NAME_CORRECTIONS.md  SESSION_MANAGEMENT_COMPLETE.md  SESSION_STATUS_2026-03-16.md  TQP_SYSTEM_GUIDE.md  all_ingredients_from_database.txt
journeys/: index.html
kitchen/: index.html
menu-pricing/: pricing_calculator_pro.html
nanny/: index.html
operations/: add_moonspoon_tools.py  read_moonspoon_tabs.py  rebuild_moonspoon_enterprise.py  show_exact_moonspoon_transactions.py  update_moonspoon_client_view.py  verify_moonspoon_sheet_data.py
scripts/: add_ingredient_endpoints.py  analyze_pricing_formulas.py  analyze_session_structure.py  deploy_corrected_recipes.py  deploy_pricing_engine.py  deploy_sessions_clean.py  deploy_sessions_dashboard.py  deploy_sessions_dashboard_fixed.py  deploy_sessions_pricing.py  deploy_tqp_dashboard.js  get_pricing_data_simple.py  ingredient_endpoints.py  main_with_pricing_dash.py  pricing_engine.py  session_management_complete.py  test_close_session.py  test_existing_sessions.py  test_pricing.py  test_sessions_api.py
sessions/: sessions_dashboard_FINAL.html  sessions_fix_api.html
transport/: index.html
wellness/: index.html
